KParser Change Log

1.1.7
* Patch: Addition of Salvage Cell listing option in Loot tab.  Credit: Valyana of Ramuh
* Patch: Show window title when selecting multiple POL processes.  Credit: Valyana of Ramuh


1.1.6.2
* Update import code for importing DirectParse files to account for changes in the database structure.
* Add new DirectParse file extension to file selection box.


1.1.6.1
* Patch fix for HELM logging filter results.


1.1.6
* Adjusted output layout of Loot page.
+ Added option to filter mobs killed by certain players when counting killed mobs in Loot tab.
+ Added option to filter mobs killed by certain players when counting killed mobs in Experience tab.
- Fix retaliation mob filter check in Defense tab.
- Fix reporting of intimidation defense events in Defense tab.
- Disable Group Mobs option in Defense Details tab while a parse is active (the option is ignored while a parse is active anyway).


1.1.5
- Fix misspelled "Frostbite" and "Freezebite" so that they show up as Weaponskills properly.
+ Add percentage of number of drops per mob to loot distribution reporting.
+ Add option to show loot groupings.
* Adjust Thief SATA threshold.


1.1.4
+ New plugin: Items.  Shows details of items used, and when.
- Fix possible null reference when reading RAM.
- Fix possible invalid key reference when using a Dictionary in the Extra Attacks plugin.
+ Add framework for exporting data to Excel.


1.1.3
- Fix issue in parsing from log files where the same log file may be parsed multiple times.
+ If parsing from log files and the Windower Timestamp plugin is in use, KParser will now use that time to mark messages that get parsed for better database accuracy.
* Default first entry of mob list in DPM plugin is now "None".
* Consolidate smaller non-combat plugin DLLs into a single DLL.


1.1.2
- Make sure text windows are read-only.
- Fix issue with updates running twice when a parse is opened.
- Significant speed improvement fixes for the Buffs plugin.