@@ -17,7 +17,7 @@
       <Value Profile="(Default)">Ram</Value>
     </Setting>
     <Setting Name="MemoryOffset" Type="System.UInt32" Scope="User">
-      <Value Profile="(Default)">5729624</Value>
+      <Value Profile="(Default)">5743304</Value>
     </Setting>
     <Setting Name="FFXILogDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Program Files\PlayOnline\SquareEnix\FINAL FANTASY XI\TEMP</Value>
